k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: joby
  labels:
    app: joby
